# renderscholar

./: .gitignore  README.md  pyproject.toml  renderscholar.py  requirements.txt
renderscholar/: cli.py  models.py  scholar.py
renderscholar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
